feat: add confirmed category picker and simplify manager controls